test/conformance/kuttl/mutate/clusterpolicy/cornercases/jmespath-with-special-chars/00-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - policy.yaml
assert:
  - policy-assert.yaml
