test/conformance/kuttl/mutate/clusterpolicy/cornercases/jmespath-with-special-chars/01-deployment.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - resources.yaml
assert:
  - resources-assert.yaml
