test/conformance/kuttl/mutate/clusterpolicy/cornercases/jmespath-with-special-chars/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: jmespath-with-special-chars-demo
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
